Record the serializer round: what moved, what is left, and how to measure it honestly
COMPARISON_POSTGRES.md gains §0.5 with the paired same-session JMH numbers for the
serializer work (borrowed 19.748 -> 12.401 us, -37%; owning 42.274 -> 35.328 us, -16%),
the three defects that accounted for it, and where the remaining time actually is (the
cursor and page layer, not the emitter). §0.3 gains the exact reproduction commands,
including the warning this session earned twice: never diff against a figure from an
earlier session (the same unchanged code drifted 17.583 -> 19.748 between two of them),
and re-run the JMH jar with -v EXTRA before believing an error bar that exceeds its mean.

The handoff note's open-items list replaces "serializer, continued" with what the
profile now shows: the borrowed-cursor read is ~60% cursor/page layer
(getFirstChildKey/getRightSiblingKey megamorphic dispatch, flyweight bind, MemorySegment
bounds checks), with the concrete next steps and their blast radius spelled out, plus
the dead ends already measured (bigger initial chunks are slower; JsonLimitedSerializer
raw-bytes keys are ~3% on a shape this box cannot resolve).